# graph-rag-mcp-server

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Graph RAG MCP Sever Scope.md  README.md  SETUP.md  entry_points.py  install.py  main.py  pyproject.toml  pytest.ini  sgconfig.yml  system_prompt.md
.cursor/rules/: client-configs.mdc  env-and-paths.mdc  project-structure.mdc  python-mcp-guidelines.mdc  run-modes.mdc  tools-and-entrypoints.mdc
configs/: .env.example  claude-desktop.json  cursor-mcp.json  raycast-config.json
docs/: BASES_IMPLEMENTATION.md  DSPY_ENHANCEMENTS.md  DYSPY_IMPLEMENTATION.md  MCP_TROUBLESHOOTING.md  RESILIENCE_IMPROVEMENTS.md  obsidian_bases.md  uvx_in_mcp_servers.md
examples/: reading-list.base
rag_mcp_server_test_content/: README.md
rag_mcp_server_test_content/links/: Link Map.md
rag_mcp_server_test_content/planets/: Earth.md  Mars.md
rag_mcp_server_test_content_baseline/planets/: Earth.md
rule-tests/: no-print-test.yml
rule-tests/__snapshots__/: no-print-snapshot.yml
rules/: no-print.yml
scripts/: build_test_content.py  dspy_mcp_client.py  enrich_para_taxonomy.py  migrate_rdf_store.py  reindex.py  reindex_watch.py  run_mcp_evals.py  run_tests.py
src/: __init__.py  base_expressions.py  base_manager.py  base_parser.py  cache_manager.py  chroma_store.py  chunk_models.py  confidence.py  config.py  dspy_agent.py  dspy_eval.py  dspy_optimizer.py  dspy_programs.py  dspy_rag.py  dspy_signatures.py  entry_points.py  fs_indexer.py  graph_store.py  install.py  main.py  mcp_server.py  recommendations.py  resilience.py  schemas.py  semantic_chunker.py  time_filters.py  unified_store.py
tests/: README.md  conftest.py  run_tests_example.py
tests/evals/: __init__.py  metrics.py  runner.py
tests/evals/reports/: core_mcp_20250907_200549.json  core_mcp_20250907_201040.json  core_mcp_20250908_084010.json
tests/evals/suites/: __init__.py  core_mcp.py
tests/fixtures/: factories.py  mocks.py
tests/fixtures/content/baseline/: README.md
tests/fixtures/content/baseline/links/: Link Map.md
tests/fixtures/content/baseline/planets/: Mars.md
tests/fixtures/content/planets/planets/: Earth.md
tests/integration/: test_mcp_server.py
tests/unit/: test_base_expressions.py  test_base_manager.py  test_base_parser.py  test_confidence.py  test_enhanced_vault_searcher.py  test_fuzzy_matching.py  test_obsidian_syntax.py  test_query_intent.py  test_relationship_weighting.py  test_schemas_and_recommendations.py  test_smart_search_engine.py  test_time_filters.py  test_unified_store_fetch.py  test_uri_generation.py
