[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-rag-mcp-server"
version = "0.1.0"
description = "Graph RAG MCP Server for Obsidian vault with ChromaDB, RDFLib, and Gemini 2.5 Flash"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Graph RAG MCP Server", email = "noreply@example.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "obsidian", "rag", "graph", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.11.7",
    "sentence-transformers>=3.3.1",
    "rdflib>=7.1.1",
    "fastmcp>=0.3.0",
    "watchfiles>=0.24.0",
    "typer>=0.15.1",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.13.1",
    "fastapi>=0.116.1",
    "pyrefly>=0.31.0",
    "chromadb>=1.0.20",
    "uvicorn>=0.35.0",
    "oxrdflib>=0.4.0",
    "dspy-ai>=3.0.3",
    "google-genai>=1.33.0",
]

[project.scripts]
graph-rag-mcp = "src.entry_points:run_main"
graph-rag-mcp-stdio = "src.entry_points:run_stdio"
graph-rag-mcp-http = "src.entry_points:run_http"
graph-rag-mcp-install = "src.entry_points:run_installer"

[project.urls]
Homepage = "https://github.com/yourusername/graph-rag-mcp-server"
Documentation = "https://github.com/yourusername/graph-rag-mcp-server/blob/main/README.md"
Repository = "https://github.com/yourusername/graph-rag-mcp-server"
Issues = "https://github.com/yourusername/graph-rag-mcp-server/issues"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "scripts/**/*.py",
    "configs/**/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/scripts/**/*",
]

